deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-exo2
  labels:
    app: exo2
spec:
  selector:
    matchLabels:
      app: pod-exo2
  replicas: 1
  template:
    metadata:
      labels:
        app: pod-exo2
    spec:
      containers:
      - name: exo2-container
        image: exo2
        imagePullPolicy: Never
